2011-04-17  Bastian Maerkisch  <bmaerkisch@web.de>

	* config/mingw/Makefile: Use $^ and $< where applicable. Patch
	by Benjamin Lindner, SF Patch 2468650. Set TARGET only if it's
	not already defined. GNUPLOT_LUA_DIR was included twice in
	TERMOPTIONS. GNUPLOT_PS_DIR is required by show.c. [wgnuplot.chm]
	Avoid changing directory via shell which seem not to work reliably
	on all systems.

2011-04-17  Ethan A Merritt  <merritt@u.washington.edu>

	* config/Makefile.am.in:  Fix package-build breakage.

2011-04-17  Hans-Bernhard Broeker  <broeker@physik.rwth-aachen.de>

	Building the three different types of executable for Windows
	was quite cumbersome (change make variable, make clean, build,
	all that thrice).  Compiling to three different object file name
	extensions helps with that.

	* config/watcom/Makefile (VARIANT): New macro to choose among
	targets.
	(TARGETS_PLAIN, EXTRA_CPPFLAGS_PLAIN, TARGETS_PIPES)
	(EXTRA_CPPFLAGS_PIPES, TARGETS_CONSOLE, EXTRA_CPPFLAGS_CONSOLE):
	New macros for settings particular to one variant.
	(DEFAULT_TARGETS): Changed definition to use new per-variant
	macros.
	(ALL_TARGETS): New macro listing all things that can be built.
	(all): New target building all variants without the need to make
	clean in between.
	(WIN_EXTRA_INPUTS): Removed $(WINOBJS)
	(OBJS): Add $(WINOBJS) here instead.
	(CONSOLE_OBJS, PIPE_OBJS): Copies of $(OBJS) with different object
	filename extension.
	Use $(O) in favour of fixed .obj, to allow renaming trick.
	(.EXTENSIONS): Add .cobj and .pobj to list of recognized file name
	extensions.
	(.c.cobj): New implicit rule to compile sources for the console build.
	(.c.pobj): New implicit rule for pipe-enabled build.
	(wgnuplot.exe): $(WINOBJS) is contained in $(OBJS) now.
	(wgnuplot_pipes.exe): Use $(PIPE_OBJS) instead of $(OBJS)
	(gnuplot.exe): USE $(CONSOLE_OBJS) instead of $(OBJS)
	(term.cobj): New explicit rule to compile term.c for the console build.